--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.1.7",
+    "@mantine/form": "^7.2.2",
     "@mantine/hooks": "^7.1.7",
     "@tabler/icons-react": "^2.40.0",
     "@tanstack/react-query": "^5.0.5",
