--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query-devtools": "^5.8.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
+    "esbuild": "^0.19.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
